Made changes to video dimensions in site.css to fix gap in Launch page

--- a/5110FA23-master/src/wwwroot/css/site.css
+++ b/5110FA23-master/src/wwwroot/css/site.css
@@ -582,7 +582,7 @@ body, html {
     object-fit: cover;
     opacity: 1;
     z-index: -1;
-    transform: translateY(-17%);
+    transform: translateY(0);
 }
 /*dynamic-background*/
 
